<?xml version="1.0" encoding="utf-8"?>
<io.github.ole.taskintaskview.GestureLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/horizontal_gesture_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/start_external"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Start Settings"/>
                <Button
                    android:id="@+id/start_another"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Start Another"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="24dp"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textColor="@color/teal_200"
                android:text="@string/sample_p1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="24dp"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textColor="@color/purple_200"
                android:text="@string/sample_p2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="24dp"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textColor="@color/teal_700"
                android:text="@string/sample_p3"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="24dp"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textColor="@color/purple_700"
                android:text="@string/sample_p4"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="24dp"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:text="@string/sample_p5"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</io.github.ole.taskintaskview.GestureLayout>
