<?xml version="1.0" encoding="utf-8"?>
<io.github.ole.taskintaskview.GestureLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/horizontal_gesture_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_gravity="center"
                android:text="Back"/>
            <Button
                android:id="@+id/start_external"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_gravity="center"
                android:text="Settings"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</io.github.ole.taskintaskview.GestureLayout>
